# customer-spending-mongodb-pipeline

./: .env  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/aggregation/: build_aggregates.py
app/cleaning/: clean_data.py
app/config/: settings.py
app/dashboard/: app.py  dashboard.py
app/db/: indexes.py  mongo.py
app/ingestion/: ingest_raw.py
app/models/: spending_model.py
app/utils/: logger.py
